# firebreak

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
benchmarks/: bench_e2e.py  bench_executor.py  bench_profile.py  bench_serialization.py  run_all.py
examples/: basic_usage.py
firebreak/: __init__.py  decorator.py  exceptions.py  executor.py  manager.py  pool.py  profile.py  rpc.py  runner.py  stub.py  types.py
tests/: test_isolation.py
