[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "firebreak"
version = "0.1.0"
description = "Function-level sandboxing via warm Firecracker microVMs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Firebreak Authors" }
]
keywords = ["sandbox", "microvm", "firecracker", "isolation", "security"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Operating System Kernels :: Linux",
]
dependencies = [
    "msgpack>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/firebreak/firebreak"
Documentation = "https://github.com/firebreak/firebreak"
Repository = "https://github.com/firebreak/firebreak"

[tool.hatch.build.targets.wheel]
packages = ["firebreak"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true

