[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "firebreak"
version = "0.1.0"
description = "Function-level sandboxing via warm Firecracker microVMs"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Kirubakaran Athmanathan", email = "k@insstant.com" }
]
keywords = ["sandbox", "microvm", "firecracker", "isolation", "security"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: System :: Operating System Kernels :: Linux",
]
dependencies = [
    "msgpack>=1.0.0",
    "aiohttp>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://hyperclast.com/dev/oss/firebreak/"
Documentation = "https://github.com/hyperclast/firebreak/blob/master/README.md"
Repository = "https://github.com/hyperclast/firebreak"

[tool.hatch.build.targets.wheel]
packages = ["firebreak"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true

